// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateEditor onlyDatePicker snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: block;
  width: 100%;
  padding: 8px;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  font-size: inherit;
  line-height: inherit;
  border: 1px solid;
  border-radius: 4px;
  color: inherit;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
    class="emotion-0"
  >
    <input
      aria-autocomplete="none"
      class="emotion-1"
      id="propdate"
      max="9999-12-31"
      name="propdate"
      placeholder="enter a date for prop"
      type="date"
    />
  </div>
</DocumentFragment>
`;

exports[`DateEditor onlyTimePicker snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: block;
  width: 100%;
  padding: 8px;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  font-size: inherit;
  line-height: inherit;
  border: 1px solid;
  border-radius: 4px;
  color: inherit;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
    class="emotion-0"
  >
    <input
      aria-autocomplete="none"
      class="emotion-1"
      id="proptime"
      name="proptime"
      placeholder="enter a time for prop"
      type="time"
    />
  </div>
</DocumentFragment>
`;

exports[`DateEditor overview snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: block;
  width: 100%;
  padding: 8px;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  font-size: inherit;
  line-height: inherit;
  border: 1px solid;
  border-radius: 4px;
  color: inherit;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
    class="emotion-0"
  >
    <input
      aria-autocomplete="none"
      class="emotion-1"
      id="propdate"
      max="9999-12-31"
      name="propdate"
      placeholder="enter a date for prop"
      type="date"
    />
    <input
      aria-autocomplete="none"
      class="emotion-1"
      id="proptime"
      name="proptime"
      placeholder="enter a time for prop"
      type="time"
    />
  </div>
</DocumentFragment>
`;
